--- a/ch5/test.ipynb
+++ b/ch5/test.ipynb
@@ -547,8 +547,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-03T02:43:54.583022Z",
-     "start_time": "2025-09-03T02:43:54.579270Z"
+     "end_time": "2025-09-04T05:02:19.956682Z",
+     "start_time": "2025-09-04T05:02:19.948758Z"
     }
    },
    "cell_type": "code",
@@ -561,8 +561,13 @@
     "\n",
     "# 학생들을 점수(튜플의 두 번째 요소) 기준으로 오름차순 정렬\n",
     "sorted_by_score = sorted(students, key=lambda student: student[1])\n",
+    "# 내림차순, reverse=True\n",
+    "sorted_by_score2 = sorted(students, key=lambda student: student[1], reverse=True)\n",
+    "sorted_by_score3 = sorted(students, key=lambda student: student[0], reverse=True)\n",
     "\n",
-    "print(sorted_by_score)"
+    "print(sorted_by_score)\n",
+    "print(sorted_by_score2)\n",
+    "print(sorted_by_score3)"
    ],
    "id": "7a9aed4259bbc02f",
    "outputs": [
@@ -570,11 +575,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('영희', 76), ('철수', 88), ('민준', 95)]\n"
+      "[('영희', 76), ('철수', 88), ('민준', 95)]\n",
+      "[('민준', 95), ('철수', 88), ('영희', 76)]\n",
+      "[('철수', 88), ('영희', 76), ('민준', 95)]\n"
      ]
     }
    ],
-   "execution_count": 17
+   "execution_count": 1
   }
  ],
  "metadata": {
