--- a/ch6/test.ipynb
+++ b/ch6/test.ipynb
@@ -66,14 +66,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-03T06:02:03.880706Z",
-     "start_time": "2025-09-03T06:02:03.876470Z"
+     "end_time": "2025-09-04T05:03:36.189492Z",
+     "start_time": "2025-09-04T05:03:36.185261Z"
     }
    },
    "cell_type": "code",
    "source": [
     "# '사람'에 대한 설계도(클래스)를 만듭니다.\n",
     "class Person:\n",
+    "\n",
+    "    # 클래스 변수 선언.\n",
+    "    class_name = \"클래스 변수 테스트용 이름입니다. \"\n",
+    "\n",
     "    # 객체를 생성할 때 이름과 나이를 받아 초기화합니다.\n",
     "    def __init__(self, name, age):\n",
     "        self.name = name  # self.name은 이 객체의 이름 속성이 됩니다.\n",
@@ -85,18 +89,28 @@
     "        # self를 이용해 자신의 속성(name, age)에 접근합니다.\n",
     "        print(f\"안녕하세요, 제 이름은 {self.name}이고, 나이는 {self.age}살입니다.\")\n",
     "\n",
-    "    def __str__(self): # 자바의 @Override , toString() 역할이 똑같다. -> @ToString, @Data\n",
-    "        return \"해당 클래스의 인스턴스를 호출시 , 나타나는 문자열 메서드입니다.\""
+    "    def __str__(self): # 자바의 @Override ,  ToString() 역할이 똑같다. -> @ToString, @Data\n",
+    "        return \"해당 클래스의 인스턴스를 호출시 , 나타나는 문자열 메서드입니다.\"\n",
+    "\n",
+    "    #추가, 자바, 인스턴스 메서드, vs 클래스 메서드\n",
+    "    #@classmethod\n",
+    "    @classmethod\n",
+    "    def get_name(cls):\n",
+    "        return cls.class_name\n",
+    "\n",
+    "    @classmethod\n",
+    "    def set_name(cls, new_name):\n",
+    "        cls.class_name = new_name"
    ],
    "id": "daca42bc9f321012",
    "outputs": [],
-   "execution_count": 20
+   "execution_count": 2
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-09-03T06:02:05.483053Z",
-     "start_time": "2025-09-03T06:02:05.478516Z"
+     "end_time": "2025-09-04T05:03:39.818342Z",
+     "start_time": "2025-09-04T05:03:39.812305Z"
     }
    },
    "cell_type": "code",
@@ -104,9 +118,16 @@
     "# Person 클래스를 이용해 첫 번째 사람(객체) 'p1'을 생성합니다.\n",
     "# __init__ 메서드가 자동으로 호출됩니다.\n",
     "p1 = Person(\"홍길동\", 30)\n",
+    "print(f\"p1.get_name()의클래스 메서드 호출 해보기 : {p1.get_name()}\")\n",
     "\n",
     "# Person 클래스를 이용해 두 번째 사람(객체) 'p2'를 생성합니다.\n",
     "p2 = Person(\"이순신\", 45)\n",
+    "print(f\"p2.get_name()의클래스 메서드 호출 해보기 : {p2.get_name()}\")\n",
+    "\n",
+    "# 공통의 클래스 변수에, 클래스 메서드 이용해서, 수정해보고, 각각의 p1, p2에서 확인도 해보기.\n",
+    "Person.set_name(\"공통의 클래스 변수 수정 테스트 해보기. \")\n",
+    "print(f\"세터로 수정후 조회 p1.get_name()의클래스 메서드 호출 해보기 : {p1.get_name()}\")\n",
+    "print(f\"세터로 수정후 조회 p2.get_name()의클래스 메서드 호출 해보기 : {p2.get_name()}\")\n",
     "\n",
     "# 각 객체의 메서드를 호출합니다.\n",
     "print(\"\\n--- 자기소개 시작 ---\")\n",
@@ -125,7 +146,11 @@
      "output_type": "stream",
      "text": [
       "홍길동 객체가 생성되었습니다.(=생성자를 호출)\n",
+      "p1.get_name()의클래스 메서드 호출 해보기 : 클래스 변수 테스트용 이름입니다. \n",
       "이순신 객체가 생성되었습니다.(=생성자를 호출)\n",
+      "p2.get_name()의클래스 메서드 호출 해보기 : 클래스 변수 테스트용 이름입니다. \n",
+      "세터로 수정후 조회 p1.get_name()의클래스 메서드 호출 해보기 : 공통의 클래스 변수 수정 테스트 해보기. \n",
+      "세터로 수정후 조회 p2.get_name()의클래스 메서드 호출 해보기 : 공통의 클래스 변수 수정 테스트 해보기. \n",
       "\n",
       "--- 자기소개 시작 ---\n",
       "안녕하세요, 제 이름은 홍길동이고, 나이는 30살입니다.\n",
@@ -136,7 +161,7 @@
      ]
     }
    ],
-   "execution_count": 21
+   "execution_count": 3
   },
   {
    "metadata": {
